2012-05-17  Vangelis Kokkevis  <vangelis@chromium.org>

        [chromium] Expose layer tiling size options to WebSettings
        https://bugs.webkit.org/show_bug.cgi?id=86425

        Adding entries for tile size and max untiled layer size.
        
        Reviewed by Adrienne Walker.

        * chromium/public/WebLayerTreeView.h:
        (WebKit):
        (WebKit::WebLayerTreeView::Settings::Settings):
        (Settings):

2012-05-17  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move fileUtilities to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=86777

        Reviewed by Adam Barth.

        Part of a refactoring series. See tracking bug 82948.

        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):
        (Platform):
        (WebKit::Platform::fileUtilities):
        * chromium/public/WebFileUtilities.h: Added.
        (WebKit):
        (WebFileUtilities):
        (WebKit::WebFileUtilities::revealFolderInOS):
        (WebKit::WebFileUtilities::fileExists):
        (WebKit::WebFileUtilities::deleteFile):
        (WebKit::WebFileUtilities::deleteEmptyDirectory):
        (WebKit::WebFileUtilities::getFileSize):
        (WebKit::WebFileUtilities::getFileModificationTime):
        (WebKit::WebFileUtilities::directoryName):
        (WebKit::WebFileUtilities::pathByAppendingComponent):
        (WebKit::WebFileUtilities::makeAllDirectories):
        (WebKit::WebFileUtilities::getAbsolutePath):
        (WebKit::WebFileUtilities::isDirectory):
        (WebKit::WebFileUtilities::filePathToURL):
        (WebKit::WebFileUtilities::openFile):
        (WebKit::WebFileUtilities::closeFile):
        (WebKit::WebFileUtilities::seekFile):
        (WebKit::WebFileUtilities::truncateFile):
        (WebKit::WebFileUtilities::readFromFile):
        (WebKit::WebFileUtilities::writeToFile):
        (WebKit::WebFileUtilities::~WebFileUtilities):

2012-05-11  James Robinson  <jamesr@chromium.org>
