@@ -1,3 +1,13 @@
+2012-05-17  Ami Fischman  <fischman@chromium.org>
+
+        [Chromium] Store HTTP version in WebURLResponse
+        https://bugs.webkit.org/show_bug.cgi?id=86522
+
+        Reviewed by Adam Barth.
+
+        * chromium/public/WebURLResponse.h:
+        (WebURLResponse):
+
 2012-05-17  Vangelis Kokkevis  <vangelis@chromium.org>
 
         [chromium] Expose layer tiling size options to WebSettings
